Change switch button color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#bb1016</color>
     <color name="colorPrimaryDark">#a90208</color>
-    <color name="colorAccent">#1DE9B6</color>
+    <color name="colorAccent">#bb1016</color>
 
 </resources>
