--- a/app/src/main/res/layout/view_media_controller.xml
+++ b/app/src/main/res/layout/view_media_controller.xml
@@ -34,7 +34,9 @@
             android:id="@+id/media_controller_progress"
             android:layout_width="0dp"
             android:layout_height="@dimen/seekbar_height"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:progressBackgroundTint="@color/progressWhite"
+            android:secondaryProgressTint="@android:color/white" />
 
         <TextView
             android:id="@+id/time"
