--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin" />
+                app:layout_scrollFlags="scroll|enterAlways|snap" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
@@ -45,7 +45,6 @@
         android:id="@+id/search_box"
         android:visibility="invisible"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
