--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -5,4 +5,9 @@
         android:key="auto_play_switch"
         android:summary="@string/pref_description_auto_play"
         android:title="@string/pref_title_auto_play" />
+    <SwitchPreferenceCompat
+        android:defaultValue="true"
+        android:key="mobile_switch"
+        android:summary="@string/pref_description_mobile"
+        android:title="@string/pref_title_mobile" />
 </PreferenceScreen>
